--- a/HTML/19_form_join.html
+++ b/HTML/19_form_join.html
@@ -6,6 +6,7 @@
     <title>회원가입</title>
 </head>
 <body>
+    <!-- 블로그 주소 : https://blog.naver.com/yesslkim94/222209787318 -->
     <h1>회원 가입</h1>
     <form action="#">
         <ul>
