--- a/HTML/19_form_join.html
+++ b/HTML/19_form_join.html
@@ -46,6 +46,10 @@
                 <input type="checkbox" name="selectDrink" value="coffee"> <span>커피</span>
             </li> <!-- selectDrink="쉐이크","커피","티(Tea)" -->
             <li>
+                <label for="">참여하고 싶은 날짜</label>
+                <input type="date">
+            </li>
+            <li>
                 <label for="">참여하고 싶은 모임</label>
                 <select name="group">
                     <option value="default">선택해주세요</option>
@@ -57,6 +61,7 @@
             <li>
                 <label for="">포트폴리오 제출</label>
                 <button>포트폴리오 업로드</button>
+                <input type="file">
             </li>
             <li>
                 <label for="">하고싶은 말</label>
