--- a/HTML/20_form_login.html
+++ b/HTML/20_form_login.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+        />
 </head>
 <body>
     <h1>Login Form</h1>
@@ -15,11 +19,11 @@
                      width="200px">
             </li>
             <li>
-                <label for="">이메일 아이콘</label>
+                <label for=""><i class="fa-solid fa-envelope-open"></i></label>
                 <input type="text" name="name">
             </li>
             <li>
-                <label for="">자물쇠 아이콘</label>
+                <label for=""><i class="fa-solid fa-lock"></i></label>
                 <input type="text" name="password">
             </li>
             <li>
