--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -147,7 +147,7 @@
             <h2 class="title">My Work</h2>
             <p class="description">Projects</p>
             <ul class="categories">
-                <li><button class="category">All<span class="category-count">8</span></button></li>
+                <li><button class="category  selected">All<span class="category-count">8</span></button></li>
                 <li><button class="category">Front-end<span class="category-count">4</span></button></li>
                 <li><button class="category">Back-end<span class="category-count">2</span></button></li>
                 <li><button class="category">Mobile<span class="category-count">2</span></button></li>
@@ -212,7 +212,9 @@
             </ul>
         </section>
         
-        <section id="testimonial" class="section container"></section>
+        <section id="testimonial" class="section container">
+            
+        </section>
     </main>
     <footer id="contact"></footer>
 </body>
