--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -32,6 +32,7 @@
                 <li><a href="#contact" class="header-menu-item">Contact</a></li>
             </ul>
         </nav>
+        <button id="menu_toggle" class="header-toggle"><i class="fa-solid fa-bars"></i></button>
     </header>
     <main>
         <section id="home">
